Fix overflow problems

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -29,10 +29,15 @@ h1, h2, h3, h4, h5, h6 {
   color: $darkGrey;
 }
 h1 {
+  -moz-box-sizing: border-box;
+  box-sizing:      border-box;
+  width: 100%;
   font-weight: 100;
+  height: 44px;
+  line-height: 44px;
   text-transform: uppercase;
   font-size: 25px;
-  padding: 12px $hSpacing;
+  padding: 0 $hSpacing;
   margin: 0;
   background: darken($darkGrey, 7);
   color: lighten($darkGrey, 17);
@@ -62,6 +67,9 @@ h3 {
   height: 100%;
   max-width: 600px;
   box-shadow: 0 0 3px rgba(0,0,0,0.8);
+  -moz-box-sizing: border-box;
+  box-sizing:      border-box;
+  padding-bottom: 40px;
 }
 .panel-slider {
   position: relative;
@@ -98,6 +106,7 @@ h3 {
   height: 100%;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .notice {
@@ -128,7 +137,6 @@ ul.items {
 }
 
 .more {
-  border-top: 1px solid lighten($lightGrey, 25);
   padding: 5px $hSpacing;
   margin: 0;
   display: block;
@@ -352,9 +360,20 @@ ul.items {
  * Buddy profile
  ******************************************************************************/
 #buddy-profile {
-  overflow-y: auto;
+  padding-top: 44px;
+  -moz-box-sizing: border-box;
+  box-sizing:      border-box;
+  h1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
   h2 {
     padding-left: 32px;
+  }
+  .wrapper {
+    height: 100%;
+    overflow-y: auto;
   }
   .github-profile h2 {
     background-image: url("../imgs/github-icon-16.png");
@@ -490,7 +509,13 @@ ul.items {
  * Settings panel
  ******************************************************************************/
 #buddies-list {
+  padding-top: 44px;
+  -moz-box-sizing: border-box;
+  box-sizing:      border-box;
   h1 {
+    position: absolute;
+    top: 0;
+    left: 0;
     a {
       -webkit-transition: width 0.1s linear;
       -moz-transition:    width 0.1s linear;
@@ -519,6 +544,10 @@ ul.items {
         width: 70px;
       }
     }
+  }
+  .wrapper {
+    height: 100%;
+    overflow-y: auto;
   }
   li {
     -webkit-transition: background-color 0.3s linear;
